[package]
name = "hddb"
version = "0.2.0"
edition = "2021"
description = "Vector Symbolic Database"
license = "MIT"


[dependencies]
memmap2 = "0.5"
tch = { version = "0.17", features = ["download-libtorch"] }
rayon = "1.10"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[dev-dependencies]
approx = "0.5.1"
