[package]
name = "hddb"
version = "0.2.0"
edition = "2021"
description = "Vector Symbolic Database"
license = "MIT"


[dependencies]
# memmap2 = "0.5"
tch = { version = "0.17", features = ["download-libtorch"] }
# rayon = "1.10"
# tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = { version = "2.0.1", features = ["serde"] }
thiserror = "2.0.12"
log = "0.4.27"
# bincode = "1.3"

[dev-dependencies]
approx = "0.5.1"
tempfile = "3.19.1"
